--- a/index.html
+++ b/index.html
@@ -193,10 +193,8 @@
 				<p>Don't like forms? Send me an email.</p>
 			</div>
 			<div class="action">
-				<form>
-					<input class="email" type="email" name="email" placeholder="Enter Your email" required>
-					<input class="btn" type="submit" name="submit" value="Submit">
-				</form>
+				<span><a href="http://gmail.com">prateekasmegmail.com</a></span>
+                <i></i>
 			</div>
 		</div>
     </section>
