--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     <section class="home" id="home">
         <div class="home-text">
             <h3>Hello I'm </h3>
-            <h1>Prateek Kumar Singh</h1>
-            <h5>A creative designer <span>From New York</span></h5>
-            <p>I'creative designer bsede in NewYork , and I'm very passionate <br>and dedicated to my work.</p>
+            <h1 class="auto-type"></h1>
+            <h5>A creative developer <span>From India</span></h5>
+            <p>I'm an undergraduate, and I'm very passionate <br>fro learning new skills to implement them in real life.</p>
             <div class="social">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
                 <a href="#"><i class='bx bxl-linkedin'></i></a>
                 <a href="#"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="#" class="btn">About Me</a>
+            <a href="#about" class="btn">About Me</a>
         </div>
         <div class="home-img-me">
             <img src="assets/images/img1.png" alt="">
@@ -90,7 +90,7 @@
             <p>
                 Hello there! I'm a web designer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.
             </p>
-            <a href="#" class="btn">Hire Me</a>
+            <a href="https://www.linkedin.com/in/prateek-kumar-singh-u78" class="btn">Hire Me</a>
         </div>
     </section>
     <!----------------------------------PROJECTS------------------------------------>
@@ -198,6 +198,18 @@
 			</div>
 		</div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="script.js"></script>
+    <script>
+        var typed= new Typed(".auto-type", {
+            strings: ["Prateek Kumar Singh", "a Programmer","a Developer","a Creator"],
+            typeSpeed:150,
+            backSpeed:180,
+            loop:true 
+        });
+    
+
+    </script>
+    
 </body>
 </html>
