--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3>Hello I'm </h3>
             <h1 class="auto-type"></h1>
             <h5>A creative developer <span>From India</span></h5>
-            <p>I'm an undergraduate, and I'm very passionate <br>fro learning new skills to implement them in real life.</p>
+            <p>I'm an undergraduate, and I'm passionate <br>to learning new skills to implement them in real life.</p>
             <div class="social">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
@@ -48,14 +48,15 @@
     <!--------------------------------------------------------------------->
 
     <section class="sub-service">
+        <h1>Why choose me ?</h1>
         <div class="items">
             <div class="sub-box">
                 <div class="sub-img">
                     <img src="assets/images/target.png" alt="">
                 </div>
-                <h3>Pixel Perfect</h3>
+                <h3>Punctual </h3>
                 <p>
-                    Most commaon methodds for designing websites that work well on desktop is responsive and addptive design
+                    It's been always my habit to finish my projects/work on time.
                 </p>
             </div>
 
@@ -65,7 +66,7 @@
                 </div>
                 <h3>Awesome Idea</h3>
                 <p>
-                    Most commaon methodds for designing websites that work well on desktop is responsive and addptive design
+                    As a new young developer I'm bubbling with new and inovative ideas, but need guidance to go further with them.
                 </p>
             </div>
             
@@ -75,7 +76,7 @@
                 </div>
                 <h3 >High Quality</h3>
                 <p>
-                    Most commaon methodds for designing websites that work well on desktop is responsive and addptive design
+                    I try to design and spice it up with latest and tranding designs and methods.
                 </p>
             </div>
         </div>
@@ -85,11 +86,10 @@
             <img src="assets/images/about.jpg" alt="">
         </div>
         <div class="about-text">
-            <h3>Hi I'm a Designer</h3>
-            <h2>I Can Design Anything You Want</h2>
+            <h3>Hi I'm a Developer</h3>
+            <h2>I Can Design Anything You Want, within my reach</h2>
             <p>
-                Hello there! I'm a web designer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.
-            </p>
+                Ever since little, tech has driven me crazy, as a child I tried imagining how mechanisms work, but now as a developer, I know how it works.  It keeps me moving forward creating new ideas in development.  My specialties include craze for new skills to practice and programming languages.            </p>
             <a href="https://www.linkedin.com/in/prateek-kumar-singh-u78" class="btn">Hire Me</a>
         </div>
     </section>
