--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#achivement">Achivements</a></li>
             <li><a href="#contact">Contact Me</a></li>
         </ul>
-        <a href="#" class="top-btn">Download CV</a>
+        <a href="https://drive.google.com/file/d/1aTVvMhqL0H_IAmSXaZKn6hxhewBK5LGi/view?usp=sharing" class="top-btn">Download CV</a>
     </header>
 
     <!----------------------------------HOME------------------------------------>
@@ -54,9 +54,9 @@
                 <div class="sub-img">
                     <img src="assets/images/target.png" alt="">
                 </div>
-                <h3>Punctual </h3>
+                <h3>Get On Time Results</h3>
                 <p>
-                    It's been always my habit to finish my projects/work on time.
+                    I assure you to get your finished projects/work on time.
                 </p>
             </div>
 
