--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,500;0,600;1,300;1,500;1,600&display=swap"
         rel="stylesheet">
-    <title>Prateek Kumar Singh</title>
+    <title>Prateek271</title>
 </head>
 
 <body class="">
