phase-2(content_update)

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--==================== Favicon ========================-->
-    <link rel="icon" href="assets/img/icon_l.png" type="image/png">
+    <link rel="icon" href="assets\img\icon_l.png" type="image/png">
 
     <title>Prateek Kumar Singh</title>
-
 
     <!--=================== Google Fonts ====================-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,10 +17,8 @@
 
     <!--=================== Remixicons ====================-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-
     <!--=================== SwiperJS CSS ====================-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-
     <!--=================== Main CSS ====================-->
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -94,8 +91,13 @@
                         Laculis eget elementum felis pellentesque tellus tellus tincidunt
                         tortor natoque. Cras amet ornare egestas.
                     </p>
-                    <a href="#contact" class="btn btn--primary">
-                        <i class="ri-mail-line"></i>
+                    <a href="#contact" class="btn btn--primary" style="padding: 0;padding-right: 10px;">
+                        <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
+                        <lord-icon
+                            src="https://cdn.lordicon.com/rhvddzym.json"
+                            trigger="hover"
+                            style="width:50px;height:50px;">
+                        </lord-icon>
                         Hire Me
                     </a>
                     <div class="social">
@@ -158,44 +160,74 @@
             </div>
             <div class="d-grid skills__wrapper container">
                 <div class="skills__content">
-                    <h3 class="skills__title">UI/UX Design</h3>
+                    <h3 class="skills__title">Software Development</h3>
                     <div class="skills__content-wrapper">
                         <div class="skills__card">
                             <div class="skills__img-wrapper">
-                                <img src="assets/img/figma-logo.svg" alt="Figma Logo" class="skills__img">
+                                <img src="assets/img/python.png" alt="Figma Logo" class="skills__img">
                             </div>
-                            <h3 class="skills__name">Figma</h3>
+                            <h3 class="skills__name">Python</h3>
                         </div>
                         <div class="skills__card">
                             <div class="skills__img-wrapper">
-                                <img src="assets/img/adobexd-logo.svg" alt="Adobe XD Logo" class="skills__img">
+                                <img src="assets/img/java.png" alt="Adobe XD Logo" class="skills__img">
                             </div>
-                            <h3 class="skills__name">Adobe XD</h3>
+                            <h3 class="skills__name">Java</h3>
                         </div>
                         <div class="skills__card">
                             <div class="skills__img-wrapper">
-                                <img src="assets/img/adobe-illustrator-logo.svg" alt="Illustrator Logo"
+                                <img src="assets/img/mdb.png" alt="Illustrator Logo"
                                     class="skills__img">
                             </div>
-                            <h3 class="skills__name">Illustrator</h3>
+                            <h3 class="skills__name">Mongo DB</h3>
                         </div>
                         <div class="skills__card">
                             <div class="skills__img-wrapper">
-                                <img src="assets/img/photoshop-logo.svg" alt="Photoshop Logo" class="skills__img">
+                                <img src="assets/img/sql-server.png" alt="Photoshop Logo" class="skills__img">
                             </div>
-                            <h3 class="skills__name">Photoshop</h3>
+                            <h3 class="skills__name">SQL</h3>
                         </div>
                         <div class="skills__card">
                             <div class="skills__img-wrapper">
-                                <img src="assets/img/sketch-logo.svg" alt="Sketch Logo" class="skills__img">
+                                <img src="assets/img/GCP.png" alt="Sketch Logo" class="skills__img">
                             </div>
-                            <h3 class="skills__name">Sketch</h3>
+                            <h3 class="skills__name">Google Cloud Console</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="skills__content">
+                    <h3 class="skills__title">Software Development</h3>
+                    <div class="skills__content-wrapper">
+                        <div class="skills__card">
+                            <div class="skills__img-wrapper">
+                                <img src="assets/img/python.png" alt="Figma Logo" class="skills__img">
+                            </div>
+                            <h3 class="skills__name">Python</h3>
                         </div>
                         <div class="skills__card">
                             <div class="skills__img-wrapper">
-                                <img src="assets/img/invision-logo.jpg" alt="InVision Logo" class="skills__img">
+                                <img src="assets/img/java.png" alt="Adobe XD Logo" class="skills__img">
                             </div>
-                            <h3 class="skills__name">InVision</h3>
+                            <h3 class="skills__name">Java</h3>
+                        </div>
+                        <div class="skills__card">
+                            <div class="skills__img-wrapper">
+                                <img src="assets/img/mdb.png" alt="Illustrator Logo"
+                                    class="skills__img">
+                            </div>
+                            <h3 class="skills__name">Mongo DB</h3>
+                        </div>
+                        <div class="skills__card">
+                            <div class="skills__img-wrapper">
+                                <img src="assets/img/sql-server.png" alt="Photoshop Logo" class="skills__img">
+                            </div>
+                            <h3 class="skills__name">SQL</h3>
+                        </div>
+                        <div class="skills__card">
+                            <div class="skills__img-wrapper">
+                                <img src="assets/img/GCP.png" alt="Sketch Logo" class="skills__img">
+                            </div>
+                            <h3 class="skills__name">Google Cloud Console</h3>
                         </div>
                     </div>
                 </div>
@@ -222,21 +254,15 @@
                         </div>
                         <div class="skills__card">
                             <div class="skills__img-wrapper">
-                                <img src="assets/img/nodejs-logo.svg" alt="Node.Js Logo" class="skills__img">
+                                <img src="assets/img/django-logo.png" alt="Node.Js Logo" class="skills__img">
                             </div>
-                            <h3 class="skills__name">Node.Js</h3>
+                            <h3 class="skills__name">Django</h3>
                         </div>
                         <div class="skills__card">
                             <div class="skills__img-wrapper">
-                                <img src="assets/img/react-logo.svg" alt=" React  Logo" class="skills__img">
+                                <img src="assets/img/flask.png" alt=" React  Logo" class="skills__img">
                             </div>
-                            <h3 class="skills__name">React</h3>
-                        </div>
-                        <div class="skills__card">
-                            <div class="skills__img-wrapper">
-                                <img src="assets/img/vue-logo.svg" alt="Vue.js Logo" class="skills__img">
-                            </div>
-                            <h3 class="skills__name">Vue.js</h3>
+                            <h3 class="skills__name">Flask</h3>
                         </div>
                     </div>
                 </div>
