--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <section id="skills" class="skills section section-bg">
             <div class="section__header container">
                 <span class="section__subtitle">Skills</span>
-                <h2 class="section__title">Some of My Working Tools
+                <h2 class="section__title">Some of My Working Tools & Skills
                 </h2>
             </div>
             <div class="d-grid skills__wrapper container">
@@ -193,41 +193,11 @@
                             </div>
                             <h3 class="skills__name">Google Cloud Console</h3>
                         </div>
-                    </div>
-                </div>
-                <div class="skills__content">
-                    <h3 class="skills__title">Software Development</h3>
-                    <div class="skills__content-wrapper">
                         <div class="skills__card">
                             <div class="skills__img-wrapper">
-                                <img src="assets/img/python.png" alt="Figma Logo" class="skills__img">
+                                <img src="assets/img/r_lang.png" alt="Sketch Logo" class="skills__img">
                             </div>
-                            <h3 class="skills__name">Python</h3>
-                        </div>
-                        <div class="skills__card">
-                            <div class="skills__img-wrapper">
-                                <img src="assets/img/java.png" alt="Adobe XD Logo" class="skills__img">
-                            </div>
-                            <h3 class="skills__name">Java</h3>
-                        </div>
-                        <div class="skills__card">
-                            <div class="skills__img-wrapper">
-                                <img src="assets/img/mdb.png" alt="Illustrator Logo"
-                                    class="skills__img">
-                            </div>
-                            <h3 class="skills__name">Mongo DB</h3>
-                        </div>
-                        <div class="skills__card">
-                            <div class="skills__img-wrapper">
-                                <img src="assets/img/sql-server.png" alt="Photoshop Logo" class="skills__img">
-                            </div>
-                            <h3 class="skills__name">SQL</h3>
-                        </div>
-                        <div class="skills__card">
-                            <div class="skills__img-wrapper">
-                                <img src="assets/img/GCP.png" alt="Sketch Logo" class="skills__img">
-                            </div>
-                            <h3 class="skills__name">Google Cloud Console</h3>
+                            <h3 class="skills__name">R</h3>
                         </div>
                     </div>
                 </div>
