--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ speech-to-text conversion API via speech-Recognition module to convert audio chu
             <div class="d-grid blog__wrapper container">
                 <div class="blog__post">
                     <div class="blog__img-wrapper">
-                        <img src="assets/img/blog1.jpg" alt="" class="blog__img">
+                        <img src="assets/img/brain_tumor.jpeg"  style="width:296.67px;height: 222.5px;" alt="" class="blog__img">
                         <span class="blog__category">ML Learning using Data collection</span>
                     </div>
                     <div class="blog__content">
