--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <!--=================== Remixicons ====================-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <!--=================== SwiperJS CSS ====================-->
@@ -91,7 +91,7 @@
                         Laculis eget elementum felis pellentesque tellus tellus tincidunt
                         tortor natoque. Cras amet ornare egestas.
                     </p>
-                    <a href="#contact" class="btn btn--primary" style="padding: 0;padding-right: 10px;">
+                    <a href="https://www.linkedin.com/in/prateek-kumar-singh-u78/" target="_blank" class="btn btn--primary" style="padding: 0;padding-right: 10px;">
                         <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
                         <lord-icon
                             src="https://cdn.lordicon.com/rhvddzym.json"
@@ -136,7 +136,7 @@
                         facilisis urna pulvinar fringilla consequat molestie
                         vulputate lacus.
                         Pretium leo et nec fusce. Cursus volutpat sed.</p>
-                    <a href="javascript:void(0)" class="btn btn--primary" style="padding:0;padding-right: 15px;">
+                    <a href="https://drive.google.com/file/d/1kjZdmOx-eHJdnqM21K2OQMuP43JA9awz/view?usp=sharing"  target="_blank" id="link" class="btn btn--primary" style="padding:0;padding-right: 15px;">
                         <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
                         <lord-icon
                             src="https://cdn.lordicon.com/nocovwne.json"
@@ -294,7 +294,7 @@
                         amet odio cursus.
                     </p>
 
-                    <a href="#" class="btn btn--primary">
+                    <a href="https://t.me/LusiferSt"  target="_blank" class="btn btn--primary">
                         <i class="ri-chat-3-line"></i>
                         Let's Talk
                     </a>
