--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                             <i class="ri-award-fill nav__icon"></i>
                             Skills</a>
                     </li>
-                    <li class="nav__item">
+                    <!-- <li class="nav__item">
                         <a href="#service" class="nav__link">
                             <i class="ri-briefcase-3-fill nav__icon"></i>
                             Services</a>
-                    </li>
+                    </li> -->
                     </li>
                     <li class="nav__item">
                         <a href="#blog" class="nav__link">
@@ -295,7 +295,7 @@
             </div>
         </section>
 
-        <!--===================== Services =====================-->
+        <!-- ===================== Services =====================
         <section id="service" class="service section section-bg">
             <div class="d-grid service__wrapper container">
                 <div class="service__content">
@@ -357,7 +357,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!--===================== Portfolio =====================-->
         <section id="portfolio" class="portfolio section">
