--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
                 <div class="home__content">
                     <h1 class="home__title">
                         I Am <span class="home__name"></span><br>
-                        Back-End Developer<br>
-                        & Freelancer
+                        Developer<br>
+                        & a Freelancer
                     </h1>
                     <p class="home__description">
-                        Laculis eget elementum felis pellentesque tellus tellus tincidunt
-                        tortor natoque. Cras amet ornare egestas.
+                        My passion is to bring the best out of the web , and combining it with 
+                        Design and Development to create unique Experience for the user.
                     </p>
                     <a href="https://www.linkedin.com/in/prateek-kumar-singh-u78/" target="_blank"
                         class="btn btn--primary" style="padding: 0;padding-right: 10px;">
@@ -161,12 +161,12 @@
             <div class="d-grid about__wrapper container">
                 <div class="about__content">
                     <span class="section__subtitle">About Me</span>
-                    <h2 class="section__title">I Design and Develop Experiences that
-                        make people's live simple.</h2>
-                    <p class="about__description">Viverra nisl nibh dolor nam venenatis turpis ultrices. Vulputate
-                        facilisis urna pulvinar fringilla consequat molestie
-                        vulputate lacus.
-                        Pretium leo et nec fusce. Cursus volutpat sed.</p>
+                    <h2 class="section__title">I Develop Experiences that
+                        makes live's simple.</h2>
+                    <p class="about__description">So basically I'm a versatile developer who loves to code and
+                        design  and I'm always looking out for new sollutions to learn and grow.
+                        I'm a self taught developer and I'm always looking for new challenges and opportunities 
+                        improve myself.</p>
                     <a href="https://drive.google.com/file/d/1kjZdmOx-eHJdnqM21K2OQMuP43JA9awz/view?usp=sharing"
                         target="_blank" id="link" class="btn btn--primary" style="padding:0;padding-right: 15px;">
                         <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
