--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         design  and I'm always looking out for new sollutions to learn and grow.
                         I'm a self taught developer and I'm always looking for new challenges and opportunities 
                         improve myself.</p>
-                    <a href="https://drive.google.com/file/d/1kjZdmOx-eHJdnqM21K2OQMuP43JA9awz/view?usp=sharing"
+                    <a href="https://docs.google.com/document/d/1Ss-HVV0aOqgPou0QG2BEbBz5bQOw4tkzWWB2ZkFpG70/edit?usp=sharing"
                         target="_blank" id="link" class="btn btn--primary" style="padding:0;padding-right: 15px;">
                         <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
                         <lord-icon src="https://cdn.lordicon.com/nocovwne.json" trigger="hover"
