--- a/index.html
+++ b/index.html
@@ -21,6 +21,74 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <!--=================== Main CSS ====================-->
     <link rel="stylesheet" href="assets/css/main.css">
+
+    <!--=================== end mail script ====================-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            // https://dashboard.emailjs.com/admin/account
+            emailjs.init('YOUR_PUBLIC_KEY');
+        })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function () {
+            document.getElementById('contact-form').addEventListener('submit', function (event) {
+                event.preventDefault();
+                // generate a five digit number for the contact_number variable
+                this.contact_number.value = Math.random() * 100000 | 0;
+                // these IDs from the previous steps
+                emailjs.sendForm('contact_service', 'contact_form', this)
+                    .then(function () {
+                        console.log('SUCCESS!');
+                    }, function (error) {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
+    </script>
+    <!-----------------------end mail script----------------------->
+
+    <style>
+        .dot-container {
+            position: relative;
+            /* width: 100%;
+            height: 100vh; */
+            z-index: -1;
+        }
+
+        .dot {
+            position: absolute;
+            border-radius: 50%;
+            background: #212736;
+            opacity: 0.5;
+            width: 5px;
+            height: 5px;
+            /* move the dots */
+            animation: move 10s infinite;
+        }
+
+        @keyframes move {
+            0% {
+                transform: translate(0, 0);
+            }
+
+            25% {
+                transform: translate(100px, 0);
+            }
+
+            50% {
+                transform: translate(110px, 0);
+            }
+
+            75% {
+                transform: translate(120px, 0);
+            }
+
+            100% {
+                transform: translate(0, 0);
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -268,8 +336,12 @@
         </section>
 
         <!--===================== Counter =====================-->
+
         <section class="counter section">
-            <div class="d-grid counter__wrapper container">
+
+
+
+            <div class="d-grid counter__wrapper container dot-container">
                 <div class="counter__item">
                     <span class="counter__icon">
                         <i class="ri-user-line"></i>
@@ -467,18 +539,20 @@
                 <h2 class="section__title">Have a Project Idea / Want to Contact me? Feel Free to Contact</h2>
             </div>
             <div class="d-grid contact__wrapper container">
-                <form action="assets/php/send_email.php" method="POST" class="contact__form">
+                <form method="POST" class="contact__form" id="">
                     <div class="form__group">
                         <label for="name" class="form__label">Name</label>
-                        <input type="text" name="name" id="name" class="form__input" placeholder="Enter your name" required>
+                        <input type="text" name="name" id="name" class="form__input" placeholder="Enter your name"
+                            required>
                     </div>
                     <div class="form__group">
                         <label for="email" class="form__label">Email</label>
-                        <input type="email" name="email" id="email" class="form__input" placeholder="Enter your email" required>
+                        <input type="email" name="email" id="email" class="form__input" placeholder="Enter your email"
+                            required>
                     </div>
                     <div class="form__group">
                         <label for="" class="form__label">Message</label>
-                        <textarea class="form__input form__textarea" id="message" name="message" 
+                        <textarea class="form__input form__textarea" id="message" name="message"
                             placeholder="Wanna talk to me ........"></textarea>
                     </div>
                     <button type="submit" class="btn btn--primary">
@@ -574,7 +648,7 @@
     <a href="#" id="scrolltop" class="scrolltop">
         <i class="ri-arrow-up-line"></i>
     </a>
-
+    <!--------------------------------Scripts-------------------------------->
     <!--=================== SwiperJS  ====================-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
@@ -583,8 +657,9 @@
 
     <!--=================== Main JS ====================-->
     <script src="assets/js/main.js"></script>
-       
-    
+
+    <!--------------------------------Scripts-------------------------------->
+
     <script>
         $(document).ready(function () {
             setTimeout(function () {
@@ -600,6 +675,26 @@
         });
 
     </script>
+    <script>
+        function createDot() {
+            const dot = document.createElement("div");
+            dot.className = "dot";
+            dot.style.top = Math.random() * window.innerHeight + "px";
+            dot.style.left = Math.random() * window.innerWidth + "px";
+            document.querySelector(".dot-container").appendChild(dot);
+
+            setTimeout(() => {
+                dot.remove();
+            }, 10000); // Remove the dot after 5 seconds
+        }
+
+        function generateDots() {
+            setInterval(createDot, 100); // Generate a dot every second
+        }
+
+        generateDots();
+    </script>
+
 </body>
 
 </html>
