--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <li><a href="#achivement">Achivements</a></li>
             <li><a href="#contact">Contact Me</a></li>
         </ul>
-        <a href="https://drive.google.com/file/d/1aTVvMhqL0H_IAmSXaZKn6hxhewBK5LGi/view?usp=sharing"
-            class="top-btn">Download CV</a>
+        <a href="https://docs.google.com/document/d/1ZvAtGaaXQXJoupzzkfMgL6RYSmsQ49R1/edit?usp=sharing&ouid=116684913109549675199&rtpof=true&sd=true"
+            class="top-btn" target="_blank">Download CV</a>
     </header>
 
     <!----------------------------------HOME------------------------------------>
