--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <!--=================== Remixicons ====================-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <!--=================== SwiperJS CSS ====================-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <!--=================== Main CSS ====================-->
@@ -209,7 +210,7 @@
                             </li>
                             <li class="social__item">
                                 <a href="https://www.instagram.com/prateekkumar321/" class="social__link">
-                                    <i class="ri-instagram-line"></i>
+                                    <box-icon type='logo' name='github'></box-icon>
                                 </a>
                             </li>
                             <li class="social__item">
@@ -235,7 +236,7 @@
                         design and I'm always looking out for new sollutions to learn and grow.
                         I'm a self taught developer and I'm always looking for new challenges and opportunities
                         improve myself.</p>
-                    <a href="https://drive.google.com/file/d/1twfJQkaPFs61xOQDVLOoESw0_9T5hyCa/view?usp=sharing"
+                    <a href="https://docs.google.com/document/d/1ZvAtGaaXQXJoupzzkfMgL6RYSmsQ49R1/edit?usp=sharing&ouid=116684913109549675199&rtpof=true&sd=true"
                         target="_blank" id="link" class="btn btn--primary" style="padding:0;padding-right: 15px;">
                         <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
                         <lord-icon src="https://cdn.lordicon.com/nocovwne.json" trigger="hover"
