--- a/index.html
+++ b/index.html
@@ -210,7 +210,12 @@
                             </li>
                             <li class="social__item">
                                 <a href="https://www.instagram.com/prateekkumar321/" class="social__link">
-                                    <box-icon type='logo' name='github'></box-icon>
+                                    <box-icon name='instagram' type='logo' color='#999797' ></box-icon>
+                                </a>
+                            </li>
+                            <li class="social__item">
+                                <a href="https://github.com/praTeek271" class="social__link">
+                                    <box-icon name='github' type='logo' color='#999797' ></box-icon>
                                 </a>
                             </li>
                             <li class="social__item">
