--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                         class="portfolio__img">
                     <div class="portfolio__info">
                         <div class="portfolio__info-wrapper">
-                            <h3 class="portfolio__title">Code Buster Website for college</h3>
+                            <h3 class="portfolio__title">NavAI for Route Prediction</h3>
                             <p class="portfolio__description">
                                 Our AI Model aims to provide a visualization of the route and predict the shortes route
                                 using traffic hearmap.
