Updated contents of the page

--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
                                 </a>
                             </li>
                             <li class="social__item">
-                                <a href="https://twitter.com/home" class="social__link">
+                                <a href="https://twitter.com/prateek2719" class="social__link">
                                     <i class="ri-twitter-line"></i>
                                 </a>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <img src="assets/img/home.png" alt="Prateek Kumar Singh" class="home__img">
+                <img src="assets/img/home_me.png" alt="Prateek Kumar Singh" class="home__img">
             </div>
         </section>
 
@@ -250,7 +250,7 @@
                         Download CV
                     </a>
                 </div>
-                <img src="assets/img/new_about_.png" alt="Prateek Kumar Singh" class="about__img">
+                <img src="assets/img/main_prateek_img.png" alt="Prateek Kumar Singh" class="about__img">
             </div>
         </section>
 
@@ -359,21 +359,21 @@
                     <span class="counter__icon">
                         <i class="ri-briefcase-line"></i>
                     </span>
-                    <p class="counter__number" data-target="50">0</p>
+                    <p class="counter__number" data-target="70">0</p>
                     <h2 class="counter__title">Projects Completed</h2>
                 </div>
                 <div class="counter__item">
                     <span class="counter__icon">
                         <i class="ri-cup-line"></i>
                     </span>
-                    <p class="counter__number" data-target="500">0</p>
+                    <p class="counter__number" data-target="600">0</p>
                     <h2 class="counter__title">Cups Of Coffee</h2>
                 </div>
                 <div class="counter__item">
                     <span class="counter__icon">
                         <i class="ri-code-line"></i>
                     </span>
-                    <p class="counter__number" data-target="600">0</p>
+                    <p class="counter__number" data-target="800">0</p>
                     <h2 class="counter__title">Happy Commits</h2>
                 </div>
             </div>
@@ -389,7 +389,7 @@
             <div class="d-grid portfolio__wrapper container">
                 <div class="portfolio__project">
                     <div class="portfolio__overlay"></div>
-                    <img src="assets/img/ai_bot.gif" style="width: 350px;height: 350px;" alt="Website Design"
+                    <img src="assets/img/adam.gif" style="width: 350px;height: 350px;" alt="Website Design"
                         class="portfolio__img">
                     <div class="portfolio__info">
                         <div class="portfolio__info-wrapper">
@@ -409,7 +409,7 @@
 
                 <div class="portfolio__project">
                     <div class="portfolio__overlay"></div>
-                    <img src="assets/img/adven.png" style="width: 350px;height: 350px;" alt="Mobile App UI/UX Design "
+                    <img src="assets/img/adven_proj.gif" style="width: 350px;height: 350px;" alt="Mobile App UI/UX Design "
                         class="portfolio__img">
                     <div class="portfolio__info">
                         <div class="portfolio__info-wrapper">
@@ -442,9 +442,10 @@
                         <i class="ri-external-link-line"></i>
                     </a>
                 </div>
+
                 <div class="portfolio__project">
                     <div class="portfolio__overlay"></div>
-                    <img src="assets/img/demo.png" style="width: 350px;height: 350px;" alt="App Re-design"
+                    <img src="assets/img/output.gif" style="width: 350px;height: 350px;" alt="App Re-design"
                         class="portfolio__img">
                     <div class="portfolio__info">
                         <div class="portfolio__info-wrapper">
@@ -460,6 +461,7 @@
                         <i class="ri-external-link-line"></i>
                     </a>
                 </div>
+
             </div>
         </section>
 
@@ -640,7 +642,7 @@
                         </a>
                     </li>
                     <li class="social__item">
-                        <a href="https://twitter.com/home" class="social__link">
+                        <a href="https://twitter.com/prateek2719" class="social__link">
                             <i class="ri-twitter-line"></i>
                         </a>
                     </li>
@@ -681,6 +683,7 @@
         });
 
     </script>
+
     <script>
         function createDot() {
             const dot = document.createElement("div");
