fixed for contents of the web

--- a/index.html
+++ b/index.html
@@ -186,11 +186,13 @@
                     <h1 class="home__title">
                         I Am <span class="home__name"></span><br>
                         Developer<br>
-                        & a Freelancer
+                        & a Researcher
                     </h1>
-                    <p class="home__description">
-                        My passion is to bring the best out of the web , and combining it with
-                        Design and Development to create unique Experience for the user.
+                    <p class="home__description" style="font-weight: 500;">
+                        I enjoy researching and developing new things. I am a self-taught developer 
+                        and I am always looking for new challenges and opportunities to improve myself.
+                        I love to make of the web , and combining it with
+                        Design and Development to create a unique <b>Experience</b> for the user.
                     </p>
                     <a href="https://www.linkedin.com/in/prateek-kumar-singh-u78/" target="_blank"
                         class="btn btn--primary" style="padding: 0;padding-right: 10px;">
