Update resume link in index.html

--- a/index.html
+++ b/index.html
@@ -243,8 +243,7 @@
                         design and I'm always looking out for new sollutions to learn and grow.
                         I'm a self taught developer and I'm always looking for new challenges and opportunities
                         improve myself.</p>
-                    <a href="https://docs.google.com/document/d/1ZvAtGaaXQXJoupzzkfMgL6RYSmsQ49R1/edit?usp=sharing&ouid=116684913109549675199&rtpof=true&sd=true"
-                        target="_blank" id="link" class="btn btn--primary" style="padding:0;padding-right: 15px;">
+                    <a href="/assets/PRATEEK_RESUME.pdf" target="_blank" id="link" class="btn btn--primary" style="padding:0;padding-right: 15px;">
                         <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
                         <lord-icon src="https://cdn.lordicon.com/nocovwne.json" trigger="hover"
                             colors="primary:#121331,secondary:#9cf4df" style="width: 59px;height: 50px;">
